<?xml version="1.0"?>
<package format="2">
  <name>diff_2dnav</name>
  <version>0.1.0</version>
  <description>ROS launch and odometry publisher package for differential drive robot</description>

  <maintainer email="zzongaone@gmail.com">Jonghee Son</maintainer>

  <license>GPLv3</license>

  <url type="GitHub">https://github.com/jonghee-son/diff_2dnav</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>move_base</exec_depend>

  <export>

  </export>
</package>
